force-app/main/default/objects/EI_PREMISE__c/EI_PREMISE__c.object-meta.xml
<CustomObject>
    <description>The premise (location rollup) level information for CC&amp;B SAs. Initially for residential SAs/ESA project.  The external id is the CC&amp;B PREM_ID so updates for future CC&amp;B source can be utilized.</description>
    <label>Premise</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Premise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>