force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Customer_for_Last_6_or_more_Yrs_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Customer_for_Last_6_or_more_Yrs_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE Customer for Last 6 or More Years</label>
    <length>1</length>
    <type>Text</type>
</CustomField>