force-app/main/default/objects/EI_PREMISE__c/fields/Care_Enrolled_EI__c.field-meta.xml
<CustomField>
    <fullName>Care_Enrolled_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to indicate the premise customer is enrolled in CARE.</description>
    <inlineHelpText>Check to indicate the premise customer is enrolled in CARE.</inlineHelpText>
    <label>Deprecated Care Enrolled</label>
    <type>Checkbox</type>
</CustomField>