force-app/main/default/objects/EI_PREMISE__c/fields/CARE_HU_Certification_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_HU_Certification_Date_EI__c</fullName>
    <description>CARE High Usage Certification Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE High Usage Certification Date.  This customer has high usage and is mandated to participate in ESA, else their CARE enrollment will be revolked.</inlineHelpText>
    <label>CARE HU Certification Date</label>
    <type>Date</type>
</CustomField>