force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Last_Drop_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Last_Drop_Date_EI__c</fullName>
    <description>CARE Last Drop Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE Last Drop Date</inlineHelpText>
    <label>CARE Last Drop Date</label>
    <type>Date</type>
</CustomField>