force-app/main/default/objects/EI_PREMISE__c/fields/CARE_last_PEV_date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_last_PEV_date_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>PEV = Post Enrollment Verification.  After this customer enrolled in the CARE program, the date CARE last verified their income qualification.</inlineHelpText>
    <label>CARE Last PEV Date</label>
    <type>Date</type>
</CustomField>