force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Moved_In_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Moved_In_Date_EI__c</fullName>
    <description>CARE Moved In Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE Moved In Date</inlineHelpText>
    <label>CARE Moved In Date</label>
    <type>Date</type>
</CustomField>