force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Recently_Moved_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Recently_Moved_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CARE Recently Moved (OLD)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>