force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Recently_PEVed_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Recently_PEVed_EI__c</fullName>
    <description>Is CARE post enrollment verified during last two years?</description>
    <formula>IF ( ISBLANK(CARE_last_PEV_date_EI__c), false, 
IF ( today() - CARE_last_PEV_date_EI__c &lt;= 730, true, false ) 
)</formula>
    <inlineHelpText>Is CARE post enrollment verified during last two years?</inlineHelpText>
    <label>CARE Recently PEVed</label>
    <type>Checkbox</type>
</CustomField>