force-app/main/default/objects/EI_PREMISE__c/fields/CARE_Recert_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>CARE_Recert_Date_EI__c</fullName>
    <description>CARE Re certification Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CARE Re certification Date</inlineHelpText>
    <label>CARE Recert Date</label>
    <type>Date</type>
</CustomField>