force-app/main/default/objects/EI_PREMISE__c/fields/Care_Start_Date_EI__c.field-meta.xml
<CustomField>
    <fullName>Care_Start_Date_EI__c</fullName>
    <description>Care_Enroll_Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date customer was enrolled in the CARE Program</inlineHelpText>
    <label>CARE Enroll Date</label>
    <type>Date</type>
</CustomField>