force-app/main/default/objects/EI_PREMISE__c/fields/CAREUNIT__c.field-meta.xml
<CustomField>
    <fullName>CAREUNIT__c</fullName>
    <description>Total electric unit on CARE</description>
    <label>SM CARE Unit Electric</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>