force-app/main/default/objects/EI_PREMISE__c/fields/CENSUS_TRACT__c.field-meta.xml
<CustomField>
    <fullName>CENSUS_TRACT__c</fullName>
    <description>D5GP : Sty 2872</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CENSUS TRACT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>