force-app/main/default/objects/EI_PREMISE__c/fields/City_EI__c.field-meta.xml
<CustomField>
    <fullName>City_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>