force-app/main/default/objects/EI_PREMISE__c/fields/County_EI__c.field-meta.xml
<CustomField>
    <fullName>County_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Please ensure this is all Upper Case for the criteria based sharing rule to work for ESA Implementers</inlineHelpText>
    <label>County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>