force-app/main/default/objects/EI_PREMISE__c/fields/DAC__c.field-meta.xml
<CustomField>
    <fullName>DAC__c</fullName>
    <defaultValue>&quot;UNKNOWN&quot;</defaultValue>
    <description>DAC value for PG&amp;E based on Internal seeding files from Asset Data Management GIS Analytics and external web services provided by ArcGIS.com based on coordinates and service address.</description>
    <label>DAC PGE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN DAC</fullName>
            </value>
            <value>
                <fullName>OUTSIDE DAC</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>BAD ADDRESS</fullName>
            </value>
            <value>
                <fullName>UNEXPECTED ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>