force-app/main/default/objects/EI_PREMISE__c/fields/DAC_CA__c.field-meta.xml
<CustomField>
    <fullName>DAC_CA__c</fullName>
    <defaultValue>&quot;UNKNOWN&quot;</defaultValue>
    <description>DAC value for California based on Internal seeding files from Asset Data Management GIS Analytics.</description>
    <label>DAC CA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN DAC</fullName>
            </value>
            <value>
                <fullName>OUTSIDE DAC</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <default>true</default>
                <label>UNKNOWN</label>
            </value>
            <value>
                <fullName>BAD ADDRESS</fullName>
            </value>
            <value>
                <fullName>UNEXPECTED ERROR</fullName>
            </value>
            <value>
                <fullName>&apos;OUTSIDE OF PGE TERRITORY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>