force-app/main/default/objects/EI_PREMISE__c/fields/Do_Not_Call_EI__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not call indicator.</description>
    <inlineHelpText>Do not call indicator.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>