force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Hazard_Location_EI__c.field-meta.xml
<CustomField>
    <fullName>ESA_Hazard_Location_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if location is hazardous. Please refer to the ESA enrollment for more details.</description>
    <inlineHelpText>Check if location is hazardous. Please refer to the ESA enrollment for more details.</inlineHelpText>
    <label>Hazard Location</label>
    <type>Checkbox</type>
</CustomField>