force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Hazardous_Location_Comments_EI__c.field-meta.xml
<CustomField>
    <fullName>ESA_Hazardous_Location_Comments_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hazardous Location Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>