force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Installation_Exception__c.field-meta.xml
<CustomField>
    <fullName>ESA_Installation_Exception__c</fullName>
    <label>ESA Installation Exception</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord Refusal - Covid-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>