force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Last_Treated_EI__c.field-meta.xml
<CustomField>
    <fullName>ESA_Last_Treated_EI__c</fullName>
    <description>Last Treated Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last Treated Date</inlineHelpText>
    <label>Last Treated Date</label>
    <type>Date</type>
</CustomField>