force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Zip_Code_5_Digit_EI__c.field-meta.xml
<CustomField>
    <fullName>ESA_Zip_Code_5_Digit_EI__c</fullName>
    <description>Stores the first five digits of the service zip code.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Stores the first five digits of the service zip code.</inlineHelpText>
    <label>Zip Code 5 Digit</label>
    <length>5</length>
    <type>Text</type>
</CustomField>