force-app/main/default/objects/EI_PREMISE__c/fields/ESA_Zip_Code_7_Digit_EI__c.field-meta.xml
<CustomField>
    <fullName>ESA_Zip_Code_7_Digit_EI__c</fullName>
    <description>Stores the first 7 digits of the service zip code.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Stores the first 7 digits of the service zip code.</inlineHelpText>
    <label>Zip Code 7 Digit</label>
    <length>7</length>
    <type>Text</type>
</CustomField>