force-app/main/default/objects/EI_PREMISE__c/fields/External_Id_EI__c.field-meta.xml
<CustomField>
    <fullName>External_Id_EI__c</fullName>
    <description>The CC&amp;B PREM_ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>The CC&amp;B PREM_ID.</inlineHelpText>
    <label>External Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>