force-app/main/default/objects/EI_PREMISE__c/fields/FERAUNIT__c.field-meta.xml
<CustomField>
    <fullName>FERAUNIT__c</fullName>
    <description>Total unit on FERA</description>
    <label>SM FERA Unit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>