force-app/main/default/objects/EI_PREMISE__c/fields/G_TTLUNT__c.field-meta.xml
<CustomField>
    <fullName>G_TTLUNT__c</fullName>
    <description>Total gas unit for SM space location</description>
    <label>SM Total Unit Gas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>