force-app/main/default/objects/EI_PREMISE__c/fields/GCAREUNT__c.field-meta.xml
<CustomField>
    <fullName>GCAREUNT__c</fullName>
    <description>Total SM Gas Unit on CARE</description>
    <label>SM CARE Unit Gas</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>