force-app/main/default/objects/EI_PREMISE__c/fields/High_Usage_Gas_EI__c.field-meta.xml
<CustomField>
    <fullName>High_Usage_Gas_EI__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Usage Gas</label>
    <length>1</length>
    <type>Text</type>
</CustomField>