force-app/main/default/objects/EI_PREMISE__c/fields/Last_ESA_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_ESA_Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The most recent time an ESA Enrollment Project was paid under this premise (not Space &amp; Location)</inlineHelpText>
    <label>Last ESA Enrollment Date</label>
    <type>Date</type>
</CustomField>