force-app/main/default/objects/EI_PREMISE__c/fields/Master_Metered_EI__c.field-meta.xml
<CustomField>
    <fullName>Master_Metered_EI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the premise is master metered.</description>
    <inlineHelpText>Check if the premise is master metered.</inlineHelpText>
    <label>Master Metered</label>
    <type>Checkbox</type>
</CustomField>