force-app/main/default/objects/EI_PREMISE__c/fields/New_Customer_Care_EI__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Care_EI__c</fullName>
    <formula>IF(
Today()-Care_Start_Date_EI__c &lt;=365,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This customer was enrolled in CARE within the last 365 days.</inlineHelpText>
    <label>New CARE Customer</label>
    <type>Text</type>
</CustomField>