force-app/main/default/objects/EI_PREMISE__c/fields/P4P_Program_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>P4P_Program_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>B1NB; 05/10/2018; Case 37573; P4P Enhancement 2</description>
    <inlineHelpText>To indicate that Premise is enrolled in a P4P program.  Downstream or DI programs cannot submit a rebate for this Premise, when checkbox is checked.</inlineHelpText>
    <label>P4P Program Enrolled</label>
    <type>Checkbox</type>
</CustomField>