force-app/main/default/objects/EI_PREMISE__c/fields/PERCENTILE_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>PERCENTILE_CATEGORY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PERCENTILE_CATEGORY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>