force-app/main/default/objects/EI_PREMISE__c/fields/PGE_SRVTY_PERCENTAGE__c.field-meta.xml
<CustomField>
    <fullName>PGE_SRVTY_PERCENTAGE__c</fullName>
    <label>PGE_SRVTY_PERCENTAGE</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>