force-app/main/default/objects/EI_PREMISE__c/fields/Rural_or_Urban_EI__c.field-meta.xml
<CustomField>
    <fullName>Rural_or_Urban_EI__c</fullName>
    <description>Premise is in urban or rural.</description>
    <inlineHelpText>Premise is in urban or rural.</inlineHelpText>
    <label>Rural or Urban</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>