force-app/main/default/objects/EI_PREMISE__c/fields/Service_Full_Address_EI__c.field-meta.xml
<CustomField>
    <fullName>Service_Full_Address_EI__c</fullName>
    <description>The full/complete service address in SA (computed).</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The full/complete service address in SA (computed).</inlineHelpText>
    <label>Service Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>