force-app/main/default/objects/EI_PREMISE__c/fields/TTL_UNIT__c.field-meta.xml
<CustomField>
    <fullName>TTL_UNIT__c</fullName>
    <description>Total unit for SM space location</description>
    <label>SM Total Unit Electric</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>