force-app/main/default/objects/EI_PREMISE__c/fields/Zip7_EI__c.field-meta.xml
<CustomField>
    <fullName>Zip7_EI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup up to the eligible Zip 7 item.</description>
    <inlineHelpText>Lookup up to the eligible Zip 7 item.</inlineHelpText>
    <label>Zip7</label>
    <referenceTo>ESA_Zip7__c</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>