force-app/main/default/objects/EI_PREMISE__c/fields/Zip_Code_EI__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code_EI__c</fullName>
    <description>The service zip code, including the last 4 digits.</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>The service zip code, including the last 4 digits.</inlineHelpText>
    <label>Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>