force-app/main/default/objects/EI_PREMISE__c/validationRules/Premise_Fields_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Premise_Fields_Not_Editable</fullName>
    <active>true</active>
    <description>&quot;Fields &quot;External ID&quot; and  &quot;Premise Name&quot; is editable at profile level, this validation rule prevent edit on these fields &quot;</description>
    <errorConditionFormula>AND(
       OR( 
             ISCHANGED( External_Id_EI__c), 
             ISCHANGED(Name) 
         ),
       OR( 
           $Profile.Name == &quot;ESA Implementer&quot;,
           $Profile.Name == &quot;ESA Sub-Contractor&quot;
         ) 
)</errorConditionFormula>
    <errorMessage>Please don&apos;t edit &quot;External ID&quot; or  &quot;Premise Name&quot;</errorMessage>
</ValidationRule>