force-app/main/default/objects/EI_PREMISE__c/listViews/ESA_Potential_Customers.listView-meta.xml
<ListView>
    <fullName>ESA_Potential_Customers</fullName>
    <booleanFilter>1 and (2 or 3) and 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Service_Full_Address_EI__c</columns>
    <columns>City_EI__c</columns>
    <columns>County_EI__c</columns>
    <columns>Zip_Code_EI__c</columns>
    <columns>ESA_Last_Treated_EI__c</columns>
    <columns>CARE_Customer_EI__c</columns>
    <columns>Care_Start_Date_EI__c</columns>
    <columns>CARE_Recently_PEVed_EI__c</columns>
    <columns>High_Usage_Gas_EI__c</columns>
    <columns>High_Usage_Electric_EI__c</columns>
    <columns>Rural_or_Urban_EI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Do_Not_Call_EI__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CARE_Customer_EI__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Zip7_EI__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ESA_Last_Treated_EI__c</field>
        <operation>equals</operation>
    </filters>
    <label>ESA Potential Customers</label>
    <language>en_US</language>
    <sharedTo>
        <group>ESA_Externals_w_o_CBO</group>
        <group>ESA_Program_Managers</group>
    </sharedTo>
</ListView>